<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	  	android:orientation="vertical"
	    android:background="@color/GrayMyPlaces"  >
	
	     <RelativeLayout
	        android:id="@+id/LWindowMyPlacesTopBar"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical"
	        android:paddingLeft="20dp"
	        android:paddingRight="12dp"
			android:orientation="horizontal"
			android:background="@color/bgSettings" >

			 <TextView
				 android:layout_width="wrap_content"
				 android:layout_height="60dp"
				 android:layout_alignParentLeft="true"
				 android:layout_margin="0dp"
				 android:gravity="center_vertical"
				 android:text="@string/w_processes_title"
				 android:textColor="#FFF"
				 android:textSize="22sp"
				 android:maxLines="1"/>

			 <Button
				android:id="@+id/BOK"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_marginTop="5dp"
				android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
				android:layout_marginRight="0dp"
				android:paddingBottom="9dp"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"
				android:paddingTop="9dp"
				android:text="@string/button_ok"
				android:textSize="18sp"
				android:textAllCaps="false" />
	
		</RelativeLayout>
	
 	    <FrameLayout
	        android:layout_width="match_parent"
	        android:layout_height="2dp"
	        android:background="@color/bgProcessessUnderline" />
	
	    <ListView
	       android:id="@+id/listView"
	       android:layout_width="match_parent"
	       android:layout_height="match_parent"
	       android:animateLayoutChanges="false" />
	
	    <LinearLayout
	        android:id="@+id/LProcessesProblem"
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:orientation="vertical"
	        android:visibility="gone"
	        android:padding="30dp" >
	
	        <TextView
				android:id="@+id/TVError"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingBottom="50dp"
	            android:text="@string/w_processes_empty"
	            android:textColor="@color/VeryDarkGray"
	            android:textSize="15sp"
	            android:gravity="left|center"
				android:linksClickable="true"
				android:autoLink="all" />
	    </LinearLayout>
	
	</LinearLayout>
		    
	<FrameLayout
	    android:id="@+id/LNavigationBar"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
    	android:layout_gravity="bottom"
	    android:background="@drawable/gradient_nb"
	    android:visibility="gone" />

</merge>